removed java.xml.bind module