@@ -11,10 +11,6 @@
   :plugins [[lein-cljsbuild "1.1.5"]
             [lein-figwheel "0.5.16"]]
 
-  :min-lein-version "2.5.0"
-  {{#jvm-opts-hook?}}
-  :jvm-opts ["--add-modules" "java.xml.bind"]
-  {{/jvm-opts-hook?}}
   :clean-targets ^{:protect false}
   [:target-path
    [:cljsbuild :builds :app :compiler :output-dir]
